[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
log = "0.4"
egui_table = "0.3.0"
egui_extras = "0.30.0"
chrono = "0.4.39"
rfd = "0.12"
message-io = "0.17"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
env_logger = "0.11.6"